2026-03-04-openshift-gitops-agent/1-principal/operator-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: OpenShift GitOps Operator
  name: openshift-gitops-operator
