2026-03-04-openshift-gitops-agent/1-principal/principal-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: Argo CD Agent Control Plane
  name: argocd
